--- a/.chezmoiexternal.toml
+++ b/.chezmoiexternal.toml
@@ -7,7 +7,7 @@
 [".oh-my-zsh/custom/themes/powerlevel10k"]
     type = "archive"
     url = "https://github.com/romkatv/powerlevel10k/archive/master.tar.gz"
-    exact = true
+    exact = false
     stripComponents = 1
     refreshPeriod = "168h"
 [".oh-my-zsh/custom/plugins/zsh-completions"]
